fix(button): replace white space property with min width

--- a/atoms/Button/Button.css
+++ b/atoms/Button/Button.css
@@ -10,7 +10,8 @@
   align-items: center;
   justify-content: center;
   max-width: 300px;
-  white-space: nowrap; /* Bloquear palabras en dos lineas en botones */
+  /* white-space: nowrap; */ /* Bloquear palabras en dos lineas en botones */
+  min-width: max-content;
 }
 
 .is-block {
